Fixed Alignment

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -21,6 +21,7 @@ header {
 
     @include respond(desktop) {
       width: 100%;
+      text-align: center;
     }
   }
   & .logo img {
@@ -35,6 +36,7 @@ header {
 
     @include respond(desktop) {
       flex-direction: column;
+      align-items: center;
     }
 
     & a {
